; ModuleID = '/home/carl/AnghaBench/RetroArch/wiiu/fs/extr_sd_fat_devoptab.c_unmount_sd_fat.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wiiu/fs/extr_sd_fat_devoptab.c_unmount_sd_fat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @unmount_sd_fat(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  store i8* null, i8** %3, align 8
  store i8* null, i8** %4, align 8
  store i8* null, i8** %5, align 8
  %7 = load i8*, i8** %2, align 8
  %8 = call i32 @sd_fat_remove_device(i8* %7, i8** %3, i8** %4, i8** %5)
  store i32 %8, i32* %6, align 4
  %9 = load i32, i32* %6, align 4
  %10 = icmp eq i32 %9, 0
  br i1 %10, label %11, label %24

11:                                               ; preds = %1
  %12 = load i8*, i8** %3, align 8
  %13 = load i8*, i8** %4, align 8
  %14 = load i8*, i8** %5, align 8
  %15 = call i32 @UmountFS(i8* %12, i8* %13, i8* %14)
  %16 = load i8*, i8** %3, align 8
  %17 = call i32 @FSDelClient(i8* %16, i32 -1)
  %18 = load i8*, i8** %3, align 8
  %19 = call i32 @free(i8* %18)
  %20 = load i8*, i8** %4, align 8
  %21 = call i32 @free(i8* %20)
  %22 = load i8*, i8** %5, align 8
  %23 = call i32 @free(i8* %22)
  br label %24

24:                                               ; preds = %11, %1
  %25 = load i32, i32* %6, align 4
  ret i32 %25
}

declare dso_local i32 @sd_fat_remove_device(i8*, i8**, i8**, i8**) #1

declare dso_local i32 @UmountFS(i8*, i8*, i8*) #1

declare dso_local i32 @FSDelClient(i8*, i32) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
